--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-streamlit>=1.10.0
-pandas>=1.3.0
-numpy>=1.21.0
-scikit-learn>=0.24.2
-matplotlib>=3.4.3
-seaborn>=0.11.2
-scipy>=1.7.1
-requests>=2.26.0
-flask>=2.0.0 
+streamlit>=1.24.0
+pandas
+numpy
+scikit-learn
+requests
+flask
+waitress
+matplotlib
