--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,6 @@
-streamlit>=1.24.0
-pandas
-numpy
-scikit-learn
-requests
-flask
-waitress
-matplotlib
-seaborn
+flask==3.0.0
+pandas==2.1.3
+numpy==1.24.3
+scikit-learn==1.3.2
+waitress==2.1.2
+gunicorn==21.2.0
