--- a/render.yaml
+++ b/render.yaml
@@ -2,10 +2,14 @@ services:
   - type: web
     name: co2-emission-api
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: |
+      pip install --upgrade pip
+      pip install -r requirements.txt
     startCommand: gunicorn --config gunicorn_config.py api_server:app
     envVars:
       - key: PYTHON_VERSION
         value: 3.9.18
       - key: RENDER
-        value: true 
+        value: true
+    healthCheckPath: /health
+    autoDeploy: true 
