--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-flask==3.0.0
-pandas==2.1.3
-numpy==1.24.3
-scikit-learn==1.3.2
+flask==2.0.1
+flask-cors==3.0.10
+pandas==1.5.3
+numpy==1.21.6
+scikit-learn==1.0.2
 waitress==2.1.2
-gunicorn==21.2.0
+gunicorn==20.1.0
+python-dotenv==0.19.2
